<resources>
    <string name="app_name">SSZJ</string>
    <string name="app_name_long">Slovar slovenskega znakovnega jezika</string>

    <string name="navigation_drawer_open">Odpri meni</string>
    <string name="navigation_drawer_close">Zapri meni</string>

    <string name="action_settings">Nastavitve</string>
    <string name="action_search">Iskanje</string>

    <string name="retry">Poskusi ponovno</string>

    <string name="search_hint">Vnesite besedo</string>

    <string name="nav_sets">Tematski sklopi</string>
    <string name="nav_search">Iskanje</string>
    <string name="nav_spelling">Črkovanje</string>
    <string name="nav_practice">Vaje</string>
    <string name="nav_about">O slovarju</string>

    <string name="word_base_loading">Beseda se nalaga&#8230;</string>
    <string name="word_base_error">Napaka pri nalaganju besede :(</string>
    <string name="word_base_0">Besedo izrazimo z eno kretnjo.</string>
    <string name="word_base_1">Besedo kretamo enako kot besedo:</string>
    <string name="word_base_2">Besedo kretamo s povezavo osnovnih kretenj za besede:</string>

    <string name="animation_loading">Animacija se nalaga&#8230;</string>
    <string name="animation_error">Napaka pri nalaganju animacije</string>

    <string name="definition">Definicija iz SSKJ</string>
    <string name="definition_loading">Definicija iz SSKJ se nalaga&#8230;</string>
    <string name="definition_error">Napaka pri nalaganju definicije iz SSKJ</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



    <!--About-->
    <string name="about0">Spletni slovar slovenskega znakovnega jezika je namenjen gluhim, ki si želijo poglobiti pravopisno znanje in razširiti besedni zaklad, pa tudi slišečim, ki bi radi s samostojnim učenjem razširili oziroma usvojili znanje slovenskega znakovnega jezika.
\n\nZnakovni jezik gluhih temelji na uporabi rok, mimike obraza, oči in ustnic ter gibanju telesa. Prstna abeceda se lahko uporablja skupaj z znakovnim jezikom. Znakovni jezik je za gluhe jezik sporazumevanja. V njem se lahko izražajo, poleg tega pa jim le ta način sporazumevanja omogoča njihov optimalni razvoj. Znakovni jezik nima enake slovnice kot govorni jezik na istem geografskem območju, saj je znakovni jezik neodvisen od govornega in se razvija znotraj skupnosti gluhih.
\n\nKretnje se izvajajo s premikanjem prstov in rok. Večinoma so dinamične, samo nekaj je mirujočih. Kretnje se dopolnjujejo tudi z mimiko obraza, ki poudari namen kretnje. Že kazanje s prstom pomeni kretnjo, če pokažemo na predmet v prostoru (ta, to, tu) ali če pokažemo na osebo (jaz, ti, on, ona). Izraz na obrazu mora biti povezan z vsebino, ki jo sporočamo. Lahko je čustven ali vprašujoč, npr., če rečemo: "Žal mi je, da se je to zgodilo." - lahko to spremljamo z žalostjo na obrazu. Če vprašamo: "Ali greš domov?" - to izrazimo z dvignjenimi obrvmi in vprašujočim izrazom.Kretnje velikokrat oponašajo delo oziroma gibanje, npr.: kretnja za šiviljo oponaša šivanje s šivanko, kretnja za kolo oponaša premikanje kolesa. Pri kretnjah za živali velikokrat pokažemo zunanjo značilnost živali, ipd.</string>

    <string name="about1_heading">Kaj je znakovni jezik?</string>
    <string name="about1">Slovenski znakovni jezik gluhih temelji na uporabi rok, mimike obraza, oči in ustnic ter gibanju telesa. Prstna abeceda se lahko uporablja skupaj z znakovnim jezikom. Znakovni jezik je za gluhe jezik sporazumevanja. V njem se lahko izražajo, poleg tega pa jim le ta način sporazumevanja omogoča njihov optimalni razvoj. Znakovni jezik nima enake slovnice kot govorni jezik na istem geografskem območju, saj je znakovni jezik neodvisen od govornega in se razvija znotraj skupnosti gluhih.</string>

    <string name="about2_heading">Kako je slovar nastal?</string>
    <string name="about2">Spletni slovar slovenskega znakovnega jezika se je leta 2012 razvil iz multimedijskega učbenika slovenskega znakovnega jezika. Prvi koncept multimedijskega učbenika je bil predstavljen leta 1995 v okviru festivala Milia v Cannesu. Leta 1999 se je demonstracijska verzija učbenika uvrstila med 15 najboljših projektov na EuroPrix\'99 Multimedia Art Competition. Končna verzija učbenika slovenskega znakovnega jezika pa je leta 2001 izšla na CD romu kot rezultat sodelovanja podjetja Zoom Promotion in Fakultete za računalništvo Univerze v Ljubljani. O zasnovi in razvoju učbenika so poročali številni znanstveni članki. Zaradi hitrega razvoja računalniške tehnologije učbenika na CD romu ni možno več uporabljati pod novimi operacijskimi sistemi. Po drugi strani pa je tehnološki razvoj v teh desetih letih omogočil, da se vsebine prvotnega učbenika prenesejo na svetovni splet in dopolnijo z novimi možnostmi, ki jih ponujajo spletne tehnologije.
\n\nPri razvoju multimedijskega slovarja slovenskega znakovnega jezika SSZJ so sodelovali številni posamezniki: Vito Komac, kot pobudnik, organizator in snemalec, Ljubica Podgoršek kot demonstratorka znakovnega jezika, Marjan Bregar kot ilustrator, Aleš Jaklič, Slavko Krapež, Igor Dimitrovski, Jan Dujec in Franc Solina kot razvijalci CD rom verzije učbenika ter Aleksander Bešir in Luka Cempre kot razvijalca spletne verzije slovarja.</string>
    <!--TODO: links-->
</resources>
