<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="peterfajdiga.sszj.sections.SpellingFragment" >

        <android.support.v7.widget.AppCompatTextView
            android:text="@string/about0"
            style="@style/ContentText.Normal" />
        <android.support.v7.widget.AppCompatTextView
            android:text="@string/about1_heading"
            style="@style/ContentText.Heading" />
        <android.support.v7.widget.AppCompatTextView
            android:text="@string/about1"
            style="@style/ContentText.Normal" />
        <android.support.v7.widget.AppCompatTextView
            android:text="@string/about2_heading"
            style="@style/ContentText.Heading" />
        <android.support.v7.widget.AppCompatTextView
            android:text="@string/about2"
            style="@style/ContentText.Normal" />

</android.support.v7.widget.LinearLayoutCompat>
