<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sets"
            android:title="@string/nav_sets" />
        <item
            android:id="@+id/nav_spelling"
            android:title="@string/nav_spelling" />
        <item
            android:id="@+id/nav_practice"
            android:title="@string/nav_practice" />
        <item
            android:id="@+id/nav_about"
            android:title="@string/nav_about" />
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
